# Ellipsis

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md
config/: Makefile.gnu  Makefile.intel  Makefile.open64  Makefile.suncc
ellipsis/: CMakeLists.txt  guided_hmc.c  guided_hmc.h  hanson.c  hanson.h
examples/: Makefile  eg_gauss_c.c  eg_gauss_f.f90  gauss_f.f90  uncorr_gauss_c.c  uncorr_gauss_f.f90
src/: guided_hmc.c  guided_hmc.h  hanson.c  hanson.h  mt19937.c  test_c_ellipsis.c  test_kinetic_energy.c  test_mt19937.c
src/c/: Makefile  Makefile.gnu  Makefile.intel  Makefile.open64  Makefile.suncc  gamma_func.c  gamma_func.h  gauss.c  gauss.h  guided_hmc.c  hanson.c  hanson.h  inverse_gamma.c  inverse_gamma.h  test_c_ellipsis.c  test_gauss.c  test_gauss.h  test_guided_hmc.c  test_guided_hmc.h  test_hanson.c
src/c/gnu/include/: guided_hmc.h
src/cpp/include/GuidedHmc/: GuidedHmcEngine.hpp
src/cpp/include/LinearAlgebra/: LinearAlgebraBase.hpp  LinearAlgebraTest.hpp  ModifiedStdVector.hpp
src/cpp/unit_tests/custom/: Makefile  Makefile.clang  Makefile.gnu  Makefile.intel  Makefile.open64  TestCppEllipsis.cpp
